[gd_scene load_steps=6 format=3 uid="uid://dbpip1neofwf5"]

[ext_resource type="Texture2D" uid="uid://svfsla0mgr64" path="res://assets/blue_panel.png" id="1_o0o4w"]
[ext_resource type="FontFile" uid="uid://clvt4sm2pymtn" path="res://assets/gemunu-libre-v8-latin-700.ttf" id="2_6s8td"]
[ext_resource type="Script" uid="uid://30nkjdchl7lt" path="res://scenes/LevelButton/LevelButton.gd" id="2_k2yxl"]
[ext_resource type="Texture2D" uid="uid://cotd2qooityay" path="res://assets/green_checkmark.png" id="3_k2yxl"]

[sub_resource type="LabelSettings" id="LabelSettings_e7aju"]
font = ExtResource("2_6s8td")
font_size = 32
shadow_size = 3
shadow_color = Color(0.152941, 0.152941, 0.152941, 0.45098)

[node name="LevelButton" type="NinePatchRect"]
custom_minimum_size = Vector2(64, 64)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_o0o4w")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource("2_k2yxl")

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -18.0
offset_right = 20.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_e7aju")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckMark" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 23.0
offset_bottom = 22.0
texture = ExtResource("3_k2yxl")
